cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_203.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/passwd.c:186: error: DEAD_STORE
  The value written to &pw_source_defined (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/passwd.c:186:9: Write of unused value
184.           if (pw_source_defined)
185.               goto opthelp;
186.           pw_source_defined = 1;
               ^
187.           passwds = argv;
188.       }
